Add spring-ai-ragas-multi-model module
Signed-off-by: Artem Simeshin <a.simeshin@gmail.com>